--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://elianftw03:A1gr8BIMlRU06DrV@cluster1.cvwlvkz.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=cluster1&authSource=admin
+MONGO_URI=mongodb
 
 PORT=5050
 
